--- a/index.html
+++ b/index.html
@@ -80,10 +80,17 @@
       font-size: 0.95rem;
       padding: 0.4rem 0;
       transition: color 0.15s;
+      text-align: center;
     }
 
     .dropdown a:hover {
       color: #fff;
+    }
+
+    .dropdown a .fa-external-link-alt {
+      font-size: 0.7em;
+      margin-left: 0.3rem;
+      opacity: 0.6;
     }
 
     .content {
@@ -161,9 +168,9 @@
       </div>
     </div>
     <div class="nav-item">
-      <a href="/reading/">reading</a>
+      <a href="https://www.goodreads.com/user/show/21741061-scott-wofford" target="_blank">reading</a>
       <div class="dropdown">
-        <a href="/reading/goodreads.html">Goodreads</a>
+        <a href="https://www.goodreads.com/user/show/21741061-scott-wofford" target="_blank">Goodreads <i class="fas fa-external-link-alt"></i></a>
         <a href="/reading/first-90-days.html">First 90 Days</a>
         <a href="/reading/book-snippets.html">Book Snippets</a>
       </div>
@@ -196,7 +203,7 @@
     <div class="nav-item">
       <a href="/blog/">blog</a>
       <div class="dropdown">
-        <a href="https://scwoff.substack.com" target="_blank">Substack</a>
+        <a href="https://scwoff.substack.com" target="_blank">Substack <i class="fas fa-external-link-alt"></i></a>
       </div>
     </div>
   </nav>
@@ -204,13 +211,14 @@
   <main class="content">
     <div class="card">
       <h1>Scott is building <a href="https://luthienresearch.org" target="_blank">Luthien</a></h1>
-      <p class="tagline">...and doing some other things including raising two <a href="https://www.instagram.com/p/DNmp4rgODFzCiRnhnw-Ppwpv1CjpCI8e1M7zRc0/?img_index=1" target="_blank" style="color: inherit;">dope kids</a>, reading 📚, listening to/playing music 🎸🎧, and being outside 🧗🚵‍♂️</p>
+      <p class="tagline">...and doing some other things including raising <a href="https://www.instagram.com/p/DNmp4rgODFzCiRnhnw-Ppwpv1CjpCI8e1M7zRc0/?img_index=1" target="_blank" style="color: inherit;">2 dope kids</a>, reading 📚, <a href="https://open.spotify.com/user/1239730132" target="_blank" style="color: inherit;">listening to</a> 🎧/playing music 🎸, and being outside 🚵‍♂️⛵🎾🏕️</p>
       <p class="tagline">I live in Seattle, but spend time in SF, Colombia, Tennessee, and Mexico when I'm tired of the rain 🌧️🤷‍♂️</p>
       <div class="social">
         <a href="https://www.linkedin.com/in/scottwofford/" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
         <a href="https://x.com/scottwofford" target="_blank" title="X"><i class="fab fa-x-twitter"></i></a>
         <a href="https://www.instagram.com/sqwofford/" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a>
         <a href="https://www.facebook.com/scottwofford" target="_blank" title="Facebook"><i class="fab fa-facebook"></i></a>
+        <a href="https://open.spotify.com/user/1239730132" target="_blank" title="Spotify"><i class="fab fa-spotify"></i></a>
       </div>
     </div>
   </main>
