Add Executive Review Tips to Writing Resources

--- a/writing/writing-resources.html
+++ b/writing/writing-resources.html
@@ -106,6 +106,40 @@
 
   <hr>
 
+  <h2>Executive Review Tips</h2>
+  <p><em>Adapted from advice I received before senior leadership reviews:</em></p>
+
+  <h3>Mindset</h3>
+  <ul>
+    <li><strong>Be positive and show excitement</strong> - if you're not excited about your work, why should they be?</li>
+    <li><strong>Stay open-minded and humble</strong> - reviews exist to push your thinking, not validate it</li>
+    <li><strong>Have fun</strong> - you're getting access to experienced judgment; use it</li>
+  </ul>
+
+  <h3>Answering Questions</h3>
+  <p><strong>Answer first.</strong> If someone asks you a question, start with the answer:</p>
+  <ul>
+    <li>"No"</li>
+    <li>"42"</li>
+    <li>"$2.3M"</li>
+  </ul>
+  <p><em>Then</em> provide the context and mental model that explains it. Don't start with storytelling before the answer.</p>
+
+  <p><strong>Don't guess.</strong> If you don't have an answer, say so and commit to follow up. Speculation destroys credibility.</p>
+
+  <p><strong>Don't dig when you're in a hole.</strong> If you realize you're wrong or underprepared, stop talking. Acknowledge the gap and move on.</p>
+
+  <p><strong>Don't create unnecessary surface area.</strong> Stay focused on the question. Don't introduce tangents, even interesting ones. You can follow up later.</p>
+
+  <h3>Preparation</h3>
+  <ul>
+    <li>Have backup materials ready (key metrics, initiative details, segment cuts)</li>
+    <li>Anticipate what reviewers will ask based on their priorities</li>
+    <li>Pre-wire important points with key stakeholders before the meeting</li>
+  </ul>
+
+  <hr>
+
   <h2>Document-Specific Tips</h2>
 
   <h3>Status Updates</h3>
@@ -131,6 +165,13 @@
     <li><strong>Options</strong> - what are the choices?</li>
     <li><strong>Recommendation</strong> - what should we do?</li>
     <li><strong>Ask</strong> - what do you need?</li>
+  </ul>
+
+  <h3>Executive Summaries</h3>
+  <p>A note on exec summaries: they can be counterproductive if they're too long or leave holes that require reading the full doc anyway. Consider either:</p>
+  <ul>
+    <li>A very short summary (1-2 paragraphs) with a longer body, or</li>
+    <li>No summary at all—just start with your main point</li>
   </ul>
 
   <hr>
