feat: add X Community Notes content (Spanish focus)

--- a/philosophy/x-wrong-on-internet.html
+++ b/philosophy/x-wrong-on-internet.html
@@ -20,13 +20,26 @@
   </div>
 
   <h1>X: Somebody is wrong on the internet</h1>
-  <p class="subtitle">Why I spend time in the replies.</p>
+  <p class="subtitle">Community Notes, mostly in Spanish.</p>
 
   <hr>
 
-  <p><em>Content coming soon.</em></p>
+  <h2>What I Actually Do on X</h2>
+  <p>I'm not much of a poster. My main contribution is <strong>Community Notes</strong>—the crowdsourced fact-checking system that adds context to misleading posts.</p>
 
-  <p>This page will cover my engagement philosophy on X/Twitter: Community Notes contributions, public discourse, and the case for showing up when someone is wrong on the internet.</p>
+  <p>Interestingly, most of the notes I write and rate are in Spanish. There seems to be a supply gap: not enough Community Notes contributors who speak Spanish, relative to the amount of Spanish-language misinformation that needs context.</p>
+
+  <h2>Why This Matters</h2>
+  <p>Community Notes has a clever design: notes only appear if they get agreement from people across the political spectrum. This "bridging" algorithm means notes that do appear tend to be genuinely informative rather than partisan dunks.</p>
+
+  <p>The Spanish-language gap means misinformation can spread longer before getting context. Every note I write or rate helps close that gap a little.</p>
+
+  <h2>The Bigger Picture</h2>
+  <p>This is part of my broader interest in <a href="/philosophy/wikipedia-wrong-on-internet.html">fixing wrong information at scale</a>. Community Notes, Wikipedia editing, and eventually AI-assisted verification—they're all different tools for the same goal: making the information ecosystem more accurate.</p>
+
+  <hr>
+
+  <p><em>¿Alguien está equivocado en el internet? Déjame ayudar.</em></p>
 
 </body>
 </html>
