refactor: combine X and Wikipedia into single 'Wrong on Internet' page

--- a/index.html
+++ b/index.html
@@ -206,8 +206,7 @@
       <a href="/philosophy/">philosophy</a>
       <div class="dropdown">
         <a href="/philosophy/personal-philosophy.html">Personal Philosophy</a>
-        <a href="/philosophy/x-wrong-on-internet.html">X: Wrong on Internet</a>
-        <a href="/philosophy/wikipedia-wrong-on-internet.html">Wikipedia: Wrong on Internet</a>
+        <a href="/philosophy/wrong-on-internet.html">Wrong on Internet</a>
       </div>
     </div>
     <div class="nav-item">
