--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -14,8 +14,7 @@
     <a href="/">← home</a> / <span class="section-name">philosophy & epistemics</span>
     <div class="siblings">
       <a href="/philosophy/personal-philosophy.html">Philosophy</a>
-      <a href="/philosophy/x-wrong-on-internet.html">X</a>
-      <a href="/philosophy/wikipedia-wrong-on-internet.html">Wikipedia</a>
+      <a href="/philosophy/wrong-on-internet.html">Wrong on Internet</a>
     </div>
   </div>
 
@@ -29,11 +28,8 @@
   <h3><a href="/philosophy/personal-philosophy.html">Personal Philosophy</a></h3>
   <p>My ethical framework: consequentialism with modifications. Epistemic integrity, agency commitments, honesty constraints, and how Wittgenstein and HPMOR shaped my thinking.</p>
 
-  <h3><a href="/philosophy/x-wrong-on-internet.html">X: Somebody is wrong on the internet</a></h3>
-  <p>Why I spend time in the replies. Community Notes, public discourse, and the case for showing up.</p>
-
-  <h3><a href="/philosophy/wikipedia-wrong-on-internet.html">Wikipedia: Somebody is wrong on the internet</a></h3>
-  <p>Contributing to humanity's knowledge base. Why I edit Wikipedia and Community Notes, and what I'm building to scale this.</p>
+  <h3><a href="/philosophy/wrong-on-internet.html">Someone is Wrong on the Internet</a></h3>
+  <p>Community Notes (mostly in Spanish), Wikipedia editing, and what I'm building to scale this.</p>
 
 </body>
 </html>
