--- a/philosophy/personal-philosophy.html
+++ b/philosophy/personal-philosophy.html
@@ -14,8 +14,7 @@
     <a href="/">← home</a> / <a href="/philosophy/" class="section-name">philosophy & epistemics</a>
     <div class="siblings">
       <a href="/philosophy/personal-philosophy.html" class="current">Philosophy</a>
-      <a href="/philosophy/x-wrong-on-internet.html">X</a>
-      <a href="/philosophy/wikipedia-wrong-on-internet.html">Wikipedia</a>
+      <a href="/philosophy/wrong-on-internet.html">Wrong on Internet</a>
     </div>
   </div>
 
