--- a/philosophy/wrong-on-internet.html
+++ b/philosophy/wrong-on-internet.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Wikipedia: Somebody is wrong on the internet - Scott Wofford</title>
+  <title>Someone is Wrong on the Internet - Scott Wofford</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;600&display=swap" rel="stylesheet">
@@ -29,13 +29,12 @@
     <a href="/">← home</a> / <a href="/philosophy/" class="section-name">philosophy & epistemics</a>
     <div class="siblings">
       <a href="/philosophy/personal-philosophy.html">Philosophy</a>
-      <a href="/philosophy/x-wrong-on-internet.html">X</a>
-      <a href="/philosophy/wikipedia-wrong-on-internet.html" class="current">Wikipedia</a>
+      <a href="/philosophy/wrong-on-internet.html" class="current">Wrong on Internet</a>
     </div>
   </div>
 
-  <h1>Wikipedia: Somebody is wrong on the internet</h1>
-  <p class="subtitle">Contributing to humanity's knowledge base.</p>
+  <h1>Someone is Wrong on the Internet</h1>
+  <p class="subtitle">Community Notes, Wikipedia, and the urge to fix things.</p>
 
   <hr>
 
@@ -53,6 +52,15 @@
 
   <hr>
 
+  <h2>Community Notes on X</h2>
+  <p>I'm not much of a poster. My main contribution is <strong>Community Notes</strong>—the crowdsourced fact-checking system that adds context to misleading posts.</p>
+
+  <p>Interestingly, most of the notes I write and rate are in Spanish. There seems to be a supply gap: not enough Community Notes contributors who speak Spanish, relative to the amount of Spanish-language misinformation that needs context.</p>
+
+  <p>Community Notes has a clever design: notes only appear if they get agreement from people across the political spectrum. This "bridging" algorithm means notes that do appear tend to be genuinely informative rather than partisan dunks. The Spanish-language gap means misinformation can spread longer before getting context. Every note I write or rate helps close that gap a little.</p>
+
+  <hr>
+
   <h2>Wikipedia Editing</h2>
   <p>I've been editing Wikipedia since college. It started with fixing small errors on topics I cared about and evolved into more substantial contributions. The process is meditative: find a claim, verify it, improve it, cite it properly.</p>
 
@@ -61,18 +69,6 @@
     <li><strong>Permanence.</strong> Edits persist. A fix I make today helps readers for years.</li>
     <li><strong>Neutrality norms.</strong> The community enforces balanced coverage, even on contentious topics.</li>
     <li><strong>Verification culture.</strong> Claims need sources. This is how epistemics should work.</li>
-  </ul>
-
-  <hr>
-
-  <h2>Community Notes</h2>
-  <p>X's Community Notes (formerly Birdwatch) is one of the most interesting experiments in crowdsourced fact-checking. The bridging algorithm—which requires agreement across ideological lines—produces notes that feel genuinely helpful rather than partisan.</p>
-
-  <p>I contribute because:</p>
-  <ul>
-    <li>Misinformation spreads fast; good context needs to catch up</li>
-    <li>The bridging model rewards accuracy over ideology</li>
-    <li>It's satisfying to see a note I contributed appear under a viral post</li>
   </ul>
 
   <hr>
@@ -94,6 +90,7 @@
   <hr>
 
   <p><em>"I can't go to bed yet. Someone is wrong on the internet."</em></p>
+  <p><em>¿Alguien está equivocado en el internet? Déjame ayudar.</em></p>
 
 </body>
 </html>
