--- a/sitemap.html
+++ b/sitemap.html
@@ -45,8 +45,7 @@
       <h2>Philosophy & Epistemics</h2>
       <ul>
         <li><a href="/philosophy/personal-philosophy.html">Personal Philosophy</a></li>
-        <li><a href="/philosophy/x-wrong-on-internet.html">X: Wrong on Internet</a></li>
-        <li><a href="/philosophy/wikipedia-wrong-on-internet.html">Wikipedia: Wrong on Internet</a></li>
+        <li><a href="/philosophy/wrong-on-internet.html">Wrong on Internet</a></li>
       </ul>
     </div>
 
