feat: UX polish - humble tone, compact layout, Twitter embed

--- a/philosophy/personal-philosophy.html
+++ b/philosophy/personal-philosophy.html
@@ -19,76 +19,71 @@
   </div>
 
   <h1>Personal Philosophy</h1>
-  <p class="subtitle">Consequentialism with modifications.</p>
+  <p class="subtitle">A work in progress. Subject to revision.</p>
 
   <hr>
 
   <h2>Core Framework</h2>
-  <p>I'm a consequentialist with significant modifications. Expected value reasoning is load-bearing for major decisions, but it operates within constraints and thresholds that pure utilitarianism doesn't require.</p>
+  <p>As best I can tell, I'm some kind of consequentialist with modifications. Expected value reasoning feels load-bearing for major decisions, but I notice I operate within constraints and thresholds that pure utilitarianism wouldn't require. I'm still figuring out why.</p>
 
   <h3>The Modifications</h3>
 
-  <p><strong>Epistemic integrity requirements.</strong> I distrust confidence that outpaces the underlying reasoning. When someone gives a precise p(doom) estimate, my objection isn't "you're wrong" but "the confidence your answer implies isn't justified by the enumeration you did to arrive at it." I'd rather say "5-25%, depending on assumptions I can't pin down" than perform false precision. This isn't just methodological preference—it's a moral stance about intellectual honesty.</p>
+  <p><strong>Epistemic integrity requirements.</strong> I find myself distrusting confidence that outpaces the underlying reasoning. When someone gives a narrow p(doom) estimate, my instinct isn't "you're wrong" but "I'm not sure the confidence your answer implies is justified by the work you did to arrive at it." I'd rather say "5-25%, depending on assumptions I can't pin down" than perform false precision. This feels like more than methodological preference to me—though I'm not certain.</p>
 
-  <p><strong>Agency commitments.</strong> I believe individuals should be able to specify how AI systems behave on their behalf, even if their specifications aren't globally optimal. <a href="https://luthienresearch.org">Luthien</a> isn't built on "we know what AI should do"—it's built on "users should be able to define their own constraints and verify they're enforced." This is a strong preference for preserving human autonomy layered on consequentialism.</p>
+  <p><strong>Agency commitments.</strong> I think individuals should be able to specify how AI systems behave on their behalf, even if their specifications aren't globally optimal. <a href="https://luthienresearch.org">Luthien</a> isn't built on "we know what AI should do"—it's built on "users should be able to define their own constraints and verify they're enforced." This seems like a preference for preserving human autonomy layered on consequentialism.</p>
 
-  <p><strong>Deontological constraints around honesty.</strong> I wouldn't lie to a funder even if it meaningfully increased Luthien's impact. I might embellish—selective emphasis, favorable framing, letting people draw inferences I won't explicitly state—but I won't assert things I believe to be false. The constraint is about my relationship to truth, not about outcomes.</p>
+  <p><strong>Threshold effects for moral demands.</strong> On animal welfare, for example: I'm not confident enough in the moral weights to restructure my life around them. A pure consequentialist might say if the EV calculation favors veganism, do it regardless of confidence. I seem to apply a threshold—moral demands need to clear an epistemic bar before they bind me. I'm not sure if this is principled or just convenient.</p>
 
-  <p><strong>Threshold effects for moral demands.</strong> On animal welfare: "I'm not confident enough in the moral weights to restructure my life around them." A pure consequentialist would say if the EV calculation favors veganism, do it regardless of confidence. I apply a threshold—moral demands need to clear an epistemic bar before they bind me.</p>
-
-  <p><strong>Libertarian paternalism as design philosophy.</strong> Rather than solving "what should AI do?" globally, create good defaults for predictable failure modes while preserving user override. The control system is choice architecture. Don't ban—nudge. Don't mandate—make good outcomes the path of least resistance.</p>
+  <p><strong>Libertarian paternalism as design philosophy.</strong> Rather than trying to solve "what should AI do?" globally, I'm drawn to creating good defaults for predictable failure modes while preserving user override. Choice architecture over mandates. Nudge over ban. I find this more tractable, though others might reasonably disagree.</p>
 
   <hr>
 
   <h2>The Wittgenstein Thread</h2>
-  <p>I was drawn to Wittgenstein in college philosophy, and his later work maps onto my thinking more than I initially recognized.</p>
+  <p>I was drawn to Wittgenstein in college philosophy. Looking back, his later work seems to map onto my thinking more than I initially recognized—though I may be pattern-matching too eagerly.</p>
 
-  <p><strong>Meaning as use.</strong> Wittgenstein argued that meaning isn't found in abstract definitions but in practical application—how words function in actual "language games." This is my instinct: diving deep but surfacing to ask "so what?" I'm not interested in learning for its own sake; I want to know how concepts cash out in practice.</p>
+  <p><strong>Meaning as use.</strong> Wittgenstein argued that meaning isn't found in abstract definitions but in practical application—how words function in actual "language games." This resonates with my instinct to dive deep but surface to ask "so what?" I'm not that interested in learning for its own sake; I want to know how concepts cash out in practice.</p>
 
-  <p><strong>Dissolving false problems.</strong> Wittgenstein believed many philosophical problems aren't solved but dissolved—they arise from misusing language or asking malformed questions. My view on alignment is similar: "what should AI value?" may be philosophically unsolvable as posed, but "can users specify constraints and verify enforcement?" is tractable.</p>
+  <p><strong>Dissolving false problems.</strong> Wittgenstein believed many philosophical problems aren't solved but dissolved—they arise from misusing language or asking malformed questions. I wonder if alignment is similar: "what should AI value?" may be philosophically unsolvable as posed, but "can users specify constraints and verify enforcement?" feels more tractable.</p>
 
-  <p><strong>Family resemblance over rigid categories.</strong> Wittgenstein rejected the idea that categories have essential definitions. Instead, members share overlapping similarities—like family resemblances—without a single common thread. The world is messier than clean categories suggest.</p>
+  <p><strong>Family resemblance over rigid categories.</strong> Wittgenstein rejected the idea that categories have essential definitions. Instead, members share overlapping similarities—like family resemblances—without a single common thread. This matches my sense that the world is messier than clean categories suggest.</p>
 
-  <p><strong>Against false precision.</strong> Wittgenstein critiqued philosophers who sought more precision than their subject matter allowed. This is exactly my objection to p(doom) point estimates. Precision theater is worse than honest uncertainty.</p>
+  <p><strong>Against false precision.</strong> Wittgenstein critiqued philosophers who sought more precision than their subject matter allowed. This captures something about my discomfort with narrow p(doom) ranges. Precision theater feels worse than honest uncertainty.</p>
 
   <hr>
 
   <h2>Concrete Examples</h2>
 
-  <p><strong>Career choice:</strong> I left a 9-year Principal PM career at Amazon to co-found an AI safety nonprofit. The decision logic was consequentialist (highest expected impact), but working directly on the problem matters to me, not just funding it. There's something about agency and direct contribution that my framework values beyond pure outcome optimization.</p>
+  <p><strong>Career choice:</strong> I left a 9-year Principal PM career at Amazon to co-found an AI safety startup. The decision logic was consequentialist (highest expected impact), but working directly on the problem matters to me, not just funding it. There's something about agency and direct contribution that my framework values beyond pure outcome optimization.</p>
 
-  <p><strong>P(doom) and timeline questions:</strong> When asked for point estimates, I push back on the question structure. "P(doom) conflates misalignment, misuse, structural risks, accidents—each with different threat models, different interventions, different probability estimates." I'd rather give useful uncertainty than false precision.</p>
+  <p><strong>P(doom) and timeline questions:</strong> I think the better question to ask is: is your p(doom) above the threshold that would cause you to work on AI safety full time? Humans are bad at small numbers—a p(doom) of 0.01% should still be motivating if you take it seriously. I'd rather focus on that than false precision about ranges.</p>
 
-  <p><strong>AI agents "lying" and "cheating":</strong> In Luthien's taxonomy, I categorize AI failures using moral language, not just optimization language. An agent that says one thing and does another isn't just making errors—it's violating something. Trust, honesty norms, the duty to be what you present yourself as.</p>
+  <p><strong>AI agents "lying" and "cheating":</strong> In Luthien's taxonomy, we categorize AI failures using moral language, not just optimization language. An agent that says one thing and does another isn't just making errors—it feels like it's violating something. Trust, honesty norms, the duty to be what you present yourself as. I'm not sure if this framing is philosophically defensible, but it's how I think about it.</p>
 
   <hr>
 
   <h2>The Synthesis</h2>
-  <p>I'm a consequentialist who takes expected value seriously for big decisions, but I operate with:</p>
+  <p>If I had to summarize: I seem to be a consequentialist who takes expected value seriously for big decisions, but operates with:</p>
   <ol>
-    <li><strong>Epistemic integrity requirements</strong>—don't claim more confidence than you have</li>
+    <li><strong>Epistemic integrity requirements</strong>—try not to claim more confidence than you have</li>
     <li><strong>Agency commitments</strong>—individuals get to specify their own values</li>
-    <li><strong>Deontological constraints around honesty</strong>—no lying, embellishment is a gray zone</li>
     <li><strong>Threshold effects</strong>—uncertain moral demands don't fully bind</li>
     <li><strong>Libertarian paternalist design philosophy</strong>—good defaults, user override, transparency</li>
   </ol>
 
-  <p>This framework is internally consistent and explains my actual choices. It's not pure anything, but coherent.</p>
+  <p>This framework seems internally consistent and explains my actual choices—at least, that's how it looks from the inside. It's not pure anything, but hopefully coherent.</p>
 
   <hr>
 
   <h2>The "So What?" for My Work</h2>
-  <p><a href="https://luthienresearch.org">Luthien</a> isn't just high-EV. It embodies my ethics:</p>
+  <p><a href="https://luthienresearch.org">Luthien</a> isn't just (I hope) high-EV. I'd like it to embody these ideas:</p>
 
-  <p><strong>Epistemic humility:</strong> I'm not claiming to know what AI should value. I'm saying: here are predictable failure modes, here are defaults that catch them, here's how to customize.</p>
+  <p><strong>Epistemic humility:</strong> We're not claiming to know what AI should value. We're saying: here are predictable failure modes, here are defaults that catch them, here's how to customize.</p>
 
   <p><strong>Agency preservation:</strong> Users specify their own constraints. The system is choice architecture, not value imposition.</p>
 
-  <p><strong>Honesty as terminal value:</strong> AI "lying" (inconsistency between stated intent and actual behavior) is a first-class failure mode, not because it produces bad outcomes, but because deception is specifically wrong.</p>
+  <p><strong>Honesty as something that matters:</strong> AI "lying" (inconsistency between stated intent and actual behavior) is a first-class failure mode. I'm not certain if this is because deception produces bad outcomes or because it's specifically wrong—probably both.</p>
 
-  <p><strong>Libertarian paternalism:</strong> Good defaults, easy override, transparency about the architecture. Don't ban—nudge. Don't mandate—enable.</p>
-
-  <p><em>The philosophical problem of alignment is unsolvable. The engineering problem of control is tractable. I'm building the bridge.</em></p>
+  <p><strong>Libertarian paternalism:</strong> Good defaults, easy override, transparency about the architecture. Nudge over ban. Enable over mandate.</p>
 
 </body>
 </html>
