--- a/index.html
+++ b/index.html
@@ -250,8 +250,8 @@
   <main class="content">
     <div class="card">
       <h1>Scott is building <a href="https://luthienresearch.org" target="_blank">Luthien</a></h1>
-      <p class="tagline">...and doing other stuff including raising <a href="https://www.instagram.com/p/DNmp4rgODFzCiRnhnw-Ppwpv1CjpCI8e1M7zRc0/?img_index=1" target="_blank" style="color: inherit;">2 dope kids</a>, <a href="https://www.goodreads.com/user/show/21741061-scott-wofford" target="_blank" style="color: inherit;">reading</a> 📚, <a href="https://open.spotify.com/user/1239730132" target="_blank" style="color: inherit;">listening to</a> 🎧/playing music 🎸, and being outside 🚵‍♂️⛵🎾🏕️</p>
-      <p class="tagline">I'm from Nashville, and I live in Seattle. I also spend time in SF, Colombia, and Mexico when I want some more sun ☀️ 😎</p>
+      <p class="tagline">...and doing other stuff including raising <a href="https://www.instagram.com/p/DNmp4rgODFzCiRnhnw-Ppwpv1CjpCI8e1M7zRc0/?img_index=1" target="_blank" style="color: inherit;">2 dope kids</a>, <a href="https://www.goodreads.com/user/show/21741061-scott-wofford" target="_blank" style="color: inherit;">reading</a> 📚, <a href="https://open.spotify.com/user/1239730132" target="_blank" style="color: inherit;">listening to</a> 🎧/playing music 🎸, and <span style="white-space: nowrap;">being outside 🚵‍♂️⛵🎾🏕️</span></p>
+      <p class="tagline">I'm from Nashville, and I live in Seattle. I also spend time in SF, Colombia, and Mexico when I want some more <span style="white-space: nowrap;">sun ☀️ 😎</span></p>
       <div class="social">
         <a href="https://www.linkedin.com/in/scottwofford/" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
         <a href="https://x.com/scottwofford" target="_blank" title="X"><i class="fab fa-x-twitter"></i></a>
