style: problem/architecture lowercase, remove THE from problem

--- a/luthien/landing_v8/index.html
+++ b/luthien/landing_v8/index.html
@@ -1094,7 +1094,7 @@
 
   <!-- QUOTE CAROUSEL (the lead) -->
   <section class="carousel-section" id="quotes" style="padding-top: 56px; padding-bottom: 24px;">
-    <div class="section-label">the problem</div>
+    <div class="section-label" style="text-transform: none;">problem</div>
     <div class="container" style="max-width: 560px;">
       <h2 style="font-size: clamp(1.1rem, 2.5vw, 1.4rem); font-weight: 600; color: #e4e4e7; margin-bottom: 20px; text-align: left;">Claude Code does weird and suspicious stuff sometimes...</h2>
       <div class="carousel-wrapper" id="carouselWrapper">
@@ -1139,7 +1139,7 @@
 
   <!-- HOW IT WORKS -->
   <section id="layers" style="padding-top: 32px; padding-bottom: 32px;">
-    <div class="section-label">architecture</div>
+    <div class="section-label" style="text-transform: none;">architecture</div>
     <div class="container">
       <style>
         .term-arch { max-width: 680px; margin: 0 auto; font-family: 'JetBrains Mono', monospace; }
